--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
-    "eslint": ">= 7 && < 8",
-    "eslint-config-sensible-style": "^0.1.0",
     "@typescript-eslint/eslint-plugin": ">= 5",
     "@typescript-eslint/parser": ">= 5",
+    "eslint": ">= 7 && < 8",
+    "eslint-config-sensible-style": "^0.1.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
